--- a/app/src/main/res/layout/include_edit_text_private_key.xml
+++ b/app/src/main/res/layout/include_edit_text_private_key.xml
@@ -17,7 +17,8 @@
         android:drawablePadding="@dimen/d10"
         android:hint="@string/input_password"
         android:inputType="textPassword"
-        android:maxLength="8"
+        android:maxLength="16"
+        android:digits="@string/password_rule"
         android:paddingBottom="@dimen/d10"
         android:paddingRight="@dimen/d40"
         android:textSize="@dimen/text_size_14"
