--- a/app/src/main/res/layout/layout_password_edittext.xml
+++ b/app/src/main/res/layout/layout_password_edittext.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:line="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,15 +15,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/d16">
 
-        <EditText
-            android:id="@+id/etPrivateKey"
+        <io.bcaas.view.LineEditText
+            android:id="@+id/let_private_key"
             style="@style/edit_text_style"
             android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/d10"
+            android:background="@color/transparent"
+            android:digits="@string/password_rule"
+            android:drawablePadding="@dimen/d10"
+            android:gravity="center_vertical"
             android:hint="@string/input_password"
             android:inputType="textPassword"
-            android:maxLength="8"
-            android:paddingRight="@dimen/d40" />
+            android:maxLength="16"
+            android:paddingBottom="@dimen/d10"
+            android:paddingRight="@dimen/d40"
+            android:textSize="@dimen/text_size_14"
+            line:lineColorEt="@color/title_black10" />
 
         <CheckBox
             android:id="@+id/cbPwd"
