--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bcaas="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_create_wallet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey"
-    android:id="@+id/ll_create_wallet"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
@@ -22,12 +22,6 @@
             android:layout_marginTop="@dimen/d20"
             bcaas:hint="@string/password_rule_of_length"
             bcaas:title="@string/password" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d1"
-            android:layout_margin="@dimen/d10"
-            android:background="@color/title_black10" />
 
         <io.bcaas.view.PasswordEditText
             android:id="@+id/pketConfirmPwd"
@@ -47,18 +41,19 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/d16"
         android:paddingLeft="@dimen/d4"
-        android:visibility="invisible"
         android:text="@string/remember_password"
         android:textColor="@color/red_da261f"
-        android:textSize="@dimen/text_size_12" />
+        android:textSize="@dimen/text_size_12"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_sure"
         style="@style/btn_style"
+        android:layout_width="match_parent"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
-        android:layout_width="match_parent"
         android:layout_marginTop="@dimen/d30"
+        android:enabled="false"
         android:text="@string/sure" />
 
 
