--- a/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bcaas="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_set_pwd_for_import_wallet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey"
-    android:id="@+id/ll_set_pwd_for_import_wallet"
     android:orientation="vertical">
 
     <include layout="@layout/include_header" />
@@ -24,12 +24,6 @@
             bcaas:hint="@string/password_rule_of_length"
             bcaas:title="@string/input_password" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d1"
-            android:layout_marginTop="@dimen/d16"
-            android:background="@color/title_black10" />
-
         <io.bcaas.view.PasswordEditText
             android:id="@+id/pketConfirmPwd"
             android:layout_width="match_parent"
@@ -40,14 +34,14 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tc_password_warning"
+        android:id="@+id/tv_password_rule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/d12"
-        android:visibility="invisible"
         android:text="@string/remember_password"
         android:textColor="@color/red_da261f"
-        android:textSize="@dimen/text_size_12" />
+        android:textSize="@dimen/text_size_12"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_sure"
