--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,9 +22,13 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/d32</item>
         <item name="android:singleLine">true</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
         <item name="android:layout_marginTop">@dimen/d16</item>
         <item name="android:textSize">@dimen/text_size_14</item>
         <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:textColorHint">@color/title_black30</item>
+        <item name="android:textColor">@color/title_black30</item>
     </style>
 
     <style name="edit_text_style_no_focus" parent="edit_text_style">
