设置屏幕随软键盘弹出而上移

--- a/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
+++ b/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_send_confirm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/ll_send_confirm"
     android:background="@color/theme_grey"
     android:orientation="vertical">
 
@@ -51,6 +51,7 @@
         <TextView
             android:id="@+id/tv_destination_wallet"
             style="@style/item_text_style"
+            android:layout_marginTop="@dimen/d16"
             android:ellipsize="middle"
 
             />
@@ -72,4 +73,10 @@
         android:layout_marginTop="@dimen/d30"
         android:enabled="false"
         android:text="@string/sure" />
+
+    <View
+        android:id="@+id/v_space"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d16"
+        android:background="@color/transparent" />
 </LinearLayout>
