--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -56,5 +56,9 @@
         android:enabled="false"
         android:text="@string/sure" />
 
-
+    <View
+        android:id="@+id/v_space"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d16"
+        android:background="@color/transparent" />
 </LinearLayout>
