--- a/app/src/main/res/layout/item_pop_address_list.xml
+++ b/app/src/main/res/layout/item_pop_address_list.xml
@@ -18,18 +18,18 @@
             style="@style/black_text_style"
             android:layout_width="@dimen/d0"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/d10"
+            android:layout_marginLeft="@dimen/d16"
             android:layout_weight="1"
             android:ellipsize="middle" />
 
         <TextView
             android:id="@+id/tv_address"
-            style="@style/black_text_style"
+            style="@style/item_text_style"
             android:layout_width="@dimen/d0"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/d5"
-            android:layout_marginRight="@dimen/d10"
-            android:layout_weight="2"
+            android:layout_marginRight="@dimen/d16"
+            android:layout_weight="3"
             android:ellipsize="middle" />
 
 
