--- a/app/src/main/res/layout/item_pop_currency_list.xml
+++ b/app/src/main/res/layout/item_pop_currency_list.xml
@@ -7,8 +7,9 @@
     <TextView
         android:id="@+id/tv_content"
         style="@style/black_text_style"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerInParent="true"
         android:ellipsize="middle" />
 
