--- a/app/src/main/res/layout/layout_loading_dailog.xml
+++ b/app/src/main/res/layout/layout_loading_dailog.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/transparent"
+    android:gravity="center">
 
-    <ProgressBar
-        android:id="@+id/pb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/loadView"
+        android:layout_width="@dimen/d250"
+        android:layout_height="@dimen/d160"
         android:layout_centerInParent="true"
-        android:max="100"
-        android:progress="20" />
+        android:background="@drawable/bg_black_loading"
+        android:gravity="center"
+        android:minHeight="@dimen/d100"
+        android:minWidth="@dimen/d180"
+        android:orientation="vertical"
+        android:padding="@dimen/d10">
+
+        <ProgressBar
+            android:id="@+id/pb_loading"
+            android:layout_width="@dimen/d50"
+            android:layout_height="@dimen/d50"
+            android:indeterminateTint="@color/orange_yellow" />
+
+        <TextView
+            android:id="@+id/tipTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d10"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_15" />
+    </LinearLayout>
 
 </RelativeLayout>
