--- a/app/src/main/res/layout/activity_address_manager.xml
+++ b/app/src/main/res/layout/activity_address_manager.xml
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/btn_insert_address"
-        style="@style/default_btn_style"
+        style="@style/button_style"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/d30"
         android:layout_marginLeft="@dimen/d12"
