--- a/app/src/main/res/layout/activity_import_wallet.xml
+++ b/app/src/main/res/layout/activity_import_wallet.xml
@@ -34,7 +34,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/btn_style"
+        style="@style/button_style"
         android:layout_width="match_parent"
         android:layout_below="@+id/ll_private_key"
         android:layout_marginLeft="@dimen/d10"
