--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
 
         <Button
             android:id="@+id/btn_unlock_wallet"
-            style="@style/btn_login_style"
+            style="@style/button_style"
             android:layout_below="@+id/rl_private_key"
             android:enabled="false"
             android:text="@string/unlock" />
