--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -55,7 +55,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/btn_style"
+        style="@style/button_style"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
