--- a/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/activity_set_pwd_for_import_wallet.xml
@@ -45,7 +45,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/btn_style"
+        style="@style/button_style"
         android:layout_width="match_parent"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
