--- a/app/src/main/res/layout/activity_wallet_created_success.xml
+++ b/app/src/main/res/layout/activity_wallet_created_success.xml
@@ -81,7 +81,7 @@
 
     <Button
         android:id="@+id/btn_finish"
-        style="@style/btn_style"
+        style="@style/button_style"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
