--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -200,11 +200,11 @@
 
             <Button
                 android:id="@+id/btn_send"
-                style="@style/btn_style"
+                style="@style/button_style"
                 android:layout_below="@+id/rl_transaction_info"
-                android:layout_marginLeft="@dimen/d12"
-                android:layout_marginRight="@dimen/d12"
-                android:layout_marginTop="@dimen/d20"
+                android:layout_marginLeft="@dimen/d10"
+                android:layout_marginRight="@dimen/d10"
+                android:layout_marginTop="@dimen/d2"
                 android:enabled="false"
                 android:text="@string/send" />
 
