--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/default_btn_style"
+        style="@style/default_button_style"
         android:layout_width="@dimen/d100"
         android:layout_height="@dimen/d40"
         android:layout_alignParentLeft="true"
@@ -38,7 +38,7 @@
 
     <Button
         android:id="@+id/btn_cancel"
-        style="@style/default_btn_style"
+        style="@style/default_button_style"
         android:layout_width="@dimen/d100"
         android:layout_height="@dimen/d40"
         android:layout_alignParentRight="true"
