--- a/app/src/main/res/layout/layout_bcaas_single_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_single_dialog.xml
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/btn_sure"
-        style="@style/default_btn_style"
+        style="@style/default_button_style"
         android:layout_width="match_parent"
         android:layout_height="@dimen/d40"
         android:layout_below="@+id/tv_content"
