--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="bcaas_color">#F09657</color>
+    <color name="button_left_color">#F09657</color>
+    <color name="button_right_color">#EC5E59</color>
 
     <color name="black22">#222222</color>
     <color name="black2c">#2c2c2c</color>
