--- a/app/src/main/res/drawable/bg_btn_d.xml
+++ b/app/src/main/res/drawable/bg_btn_d.xml
@@ -5,5 +5,5 @@
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/d6" />
     <!-- 背景色 -->
-    <solid android:color="@color/title_black10" />
+    <solid android:color="@color/black10_1d2124" />
 </shape>
