--- a/app/src/main/res/layout/layout_password_edittext.xml
+++ b/app/src/main/res/layout/layout_password_edittext.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tvEtTitle"
-        style="@style/black_text_style"
+        style="@style/black_16_text_style"
         android:text="@string/password" />
 
     <RelativeLayout
@@ -17,7 +17,7 @@
 
         <io.bcaas.view.LineEditText
             android:id="@+id/let_private_key"
-            style="@style/edit_text_style"
+            style="@style/black_14_edit_text_style"
             android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/d10"
             android:background="@color/transparent"
@@ -30,7 +30,7 @@
             android:paddingBottom="@dimen/d10"
             android:paddingRight="@dimen/d40"
             android:textSize="@dimen/text_size_14"
-            line:lineColorEt="@color/title_black10" />
+            line:lineColorEt="@color/black10_1d2124" />
 
         <CheckBox
             android:id="@+id/cbPwd"
