--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -15,14 +15,14 @@
 
         <TextView
             android:id="@+id/tv_account_address_key"
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d20"
             android:text="@string/address_name" />
 
 
         <EditText
             android:id="@+id/et_address_name"
-            style="@style/edit_text_style"
+            style="@style/black_14_edit_text_style"
             android:layout_alignBottom="@+id/tv_account_address_key"
             android:layout_marginLeft="@dimen/d32"
             android:layout_toRightOf="@+id/tv_account_address_key"
@@ -33,18 +33,18 @@
             android:layout_height="@dimen/d1"
             android:layout_below="@+id/tv_account_address_key"
             android:layout_marginTop="@dimen/d16"
-            android:background="@color/title_black10" />
+            android:background="@color/black10_1d2124" />
 
         <TextView
             android:id="@+id/tv_address_key"
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_below="@+id/tv_account_address_key"
             android:layout_marginTop="@dimen/d36"
             android:text="@string/address" />
 
         <EditText
             android:id="@+id/et_address"
-            style="@style/edit_text_style"
+            style="@style/black_14_edit_text_style"
             android:layout_below="@+id/tv_address_key"
             android:layout_marginBottom="@dimen/d16"
             android:hint="@string/please_input_address" />
