--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -16,14 +16,14 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/my_account_address"
             android:textSize="@dimen/text_size_14" />
 
         <TextView
             android:id="@+id/tv_account_address"
-            style="@style/item_text_style"
+            style="@style/black70_14_text_style"
             android:layout_marginBottom="@dimen/d20"
             android:layout_marginTop="@dimen/d16"
             android:maxLines="2" />
@@ -38,14 +38,14 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/authorized_representative_address"
             android:textSize="@dimen/text_size_14" />
 
         <EditText
             android:id="@+id/et_input_representatives"
-            style="@style/edit_text_style"
+            style="@style/black_14_edit_text_style"
             android:layout_marginBottom="@dimen/d20"
             android:layout_marginTop="@dimen/d16"
             android:hint="@string/enter_address_of_the_authorized"
@@ -61,7 +61,7 @@
         android:layout_marginTop="@dimen/d30"
         android:enabled="false"
         android:saveEnabled="false"
-        android:text="@string/sure" />
+        android:text="@string/confirm" />
 
     <View
         android:id="@+id/v_space"
