--- a/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
+++ b/app/src/main/res/layout/activity_send_toconfirm_pwd.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/tvTransactionDetailKey"
-            style="@style/item_text_style"
+            style="@style/black70_14_text_style"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d20"
             android:ellipsize="middle"
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/tvTransactionDetail"
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/d10"
             android:enabled="false"
@@ -38,26 +38,26 @@
             android:layout_height="@dimen/d0.2"
             android:layout_below="@+id/tv_transaction_block_title"
             android:layout_marginTop="@dimen/d10"
-            android:background="@color/title_black30" />
+            android:background="@color/black30_1d2124" />
 
 
         <TextView
             android:id="@+id/tvReceiveAccountKey"
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/receive_account_address" />
 
         <TextView
             android:id="@+id/tv_destination_wallet"
-            style="@style/item_text_style"
+            style="@style/black70_14_text_style"
             android:layout_marginTop="@dimen/d16"
             android:ellipsize="middle"
 
             />
 
         <TextView
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d40"
             android:text="@string/password" />
 
@@ -72,7 +72,7 @@
         android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
         android:enabled="false"
-        android:text="@string/sure" />
+        android:text="@string/confirm" />
 
     <View
         android:id="@+id/v_space"
