--- a/app/src/main/res/layout/activity_wallet_created_success.xml
+++ b/app/src/main/res/layout/activity_wallet_created_success.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/tv_account_address"
-            style="@style/item_text_style"
+            style="@style/black70_14_text_style"
             android:layout_marginTop="@dimen/d10"
             android:ellipsize="middle" />
 
@@ -30,10 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/d1"
             android:layout_margin="@dimen/d10"
-            android:background="@color/title_black10" />
+            android:background="@color/black10_1d2124" />
 
         <TextView
-            style="@style/black_text_style"
+            style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d20"
             android:text="@string/backup_private_key" />
 
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/backup_private_key_detail"
-            android:textColor="@color/value_black70" />
+            android:textColor="@color/black70_1d2124" />
 
         <RelativeLayout
             android:id="@+id/rl_private_key"
@@ -52,7 +52,7 @@
 
             <io.bcaas.view.LineEditText
                 android:id="@+id/let_private_key"
-                style="@style/edit_text_style"
+                style="@style/black_14_edit_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -64,7 +64,7 @@
                 android:paddingBottom="@dimen/d10"
                 android:paddingRight="@dimen/d40"
                 android:textSize="@dimen/text_size_14"
-                line:lineColorEt="@color/title_black10" />
+                line:lineColorEt="@color/black10_1d2124" />
 
             <CheckBox
                 android:id="@+id/cbPwd"
