--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -27,7 +27,7 @@
 
                 <TextView
                     android:id="@+id/tv_address_key"
-                    style="@style/black_text_style"
+                    style="@style/black_16_text_style"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
@@ -44,11 +44,11 @@
 
                     <TextView
                         android:id="@+id/tv_account_address_value"
-                        style="@style/black_text_style"
+                        style="@style/black_16_text_style"
                         android:layout_alignParentRight="true"
                         android:ellipsize="middle"
                         android:gravity="center|right"
-                        android:textColor="@color/value_black70" />
+                        android:textColor="@color/black70_1d2124" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
 
                         <TextView
                             android:id="@+id/tv_balance_key"
-                            style="@style/black_text_style"
+                            style="@style/black_16_text_style"
                             android:layout_width="@dimen/d0"
                             android:layout_weight="1"
                             android:gravity="right|center_vertical"
@@ -77,7 +77,7 @@
 
                             <TextView
                                 android:id="@+id/tv_balance"
-                                style="@style/black_text_style"
+                                style="@style/black_16_text_style"
                                 android:layout_width="wrap_content"
                                 android:layout_marginLeft="@dimen/d5"
                                 android:gravity="right|center_vertical"
@@ -104,11 +104,11 @@
                             android:layout_below="@+id/tv_account_address_value"
                             android:layout_margin="@dimen/d2"
                             android:layout_toRightOf="@+id/tv_balance"
-                            android:background="@color/title_black30" />
+                            android:background="@color/black30_1d2124" />
 
                         <TextView
                             android:id="@+id/tv_currency"
-                            style="@style/black_text_style"
+                            style="@style/black_16_text_style"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawablePadding="@dimen/d5"
@@ -127,7 +127,7 @@
 
                 <TextView
                     android:id="@+id/tv_transaction_block_title"
-                    style="@style/black_text_style"
+                    style="@style/black_16_text_style"
                     android:layout_marginTop="@dimen/d20"
                     android:text="@string/receive_account" />
 
@@ -138,11 +138,11 @@
                     android:layout_below="@+id/tv_transaction_block_title"
                     android:layout_marginBottom="@dimen/d16"
                     android:layout_marginTop="@dimen/d10"
-                    android:background="@color/title_black30" />
+                    android:background="@color/black30_1d2124" />
 
                 <TextView
                     android:id="@+id/tv_account_address_key"
-                    style="@style/black_text_style"
+                    style="@style/black_16_text_style"
                     android:layout_below="@+id/v_line"
                     android:text="@string/account_address" />
 
@@ -160,7 +160,7 @@
 
                 <EditText
                     android:id="@+id/et_input_destination_address"
-                    style="@style/edit_text_style"
+                    style="@style/black_14_edit_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_account_address_key"
@@ -173,11 +173,11 @@
                     android:layout_height="@dimen/d1"
                     android:layout_below="@+id/et_input_destination_address"
                     android:layout_marginTop="@dimen/d10"
-                    android:background="@color/title_black10" />
+                    android:background="@color/black10_1d2124" />
 
                 <TextView
                     android:id="@+id/tv_transaction_amount_key"
-                    style="@style/black_text_style"
+                    style="@style/black_16_text_style"
                     android:layout_below="@+id/v_line_2"
                     android:layout_marginTop="@dimen/d16"
                     android:inputType="number"
@@ -185,7 +185,7 @@
 
                 <EditText
                     android:id="@+id/et_transaction_amount"
-                    style="@style/edit_text_style"
+                    style="@style/black_14_edit_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_transaction_amount_key"
