--- a/app/src/main/res/layout/item_language_switch.xml
+++ b/app/src/main/res/layout/item_language_switch.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_language"
-        style="@style/black_text_style"
+        style="@style/black_16_text_style"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/d20"
@@ -32,6 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d1"
         android:layout_alignParentBottom="true"
-        android:background="@color/title_black10" />
+        android:background="@color/black10_1d2124" />
 
 </RelativeLayout>
