--- a/app/src/main/res/layout/item_pop_currency_list.xml
+++ b/app/src/main/res/layout/item_pop_currency_list.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/tv_content"
-        style="@style/black_text_style"
+        style="@style/black_16_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0.2"
         android:layout_alignParentBottom="true"
-        android:background="@color/title_black10" />
+        android:background="@color/black10_1d2124" />
 
 </RelativeLayout>
