--- a/app/src/main/res/layout/item_setting.xml
+++ b/app/src/main/res/layout/item_setting.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_setting_type"
-        style="@style/black_text_style"
+        style="@style/black_16_text_style"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/d20"
         android:layout_marginRight="@dimen/d5"
@@ -34,6 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d1"
         android:layout_alignParentBottom="true"
-        android:background="@color/title_black10" />
+        android:background="@color/black10_1d2124" />
 
 </RelativeLayout>
