--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,64 +10,21 @@
         <item name="colorAccent">@color/white</item>
     </style>
 
-    <style name="edit_text_style">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/d32</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:cursorVisible">true</item>
-        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
-        <item name="android:layout_marginTop">@dimen/d16</item>
-        <item name="android:textSize">@dimen/text_size_14</item>
-        <item name="android:background">@drawable/bg_edit_text</item>
-        <item name="android:textColorHint">@color/title_black30</item>
-        <item name="android:textColor">@color/title_black30</item>
-    </style>
-
-    <style name="edit_text_style_no_focus" parent="edit_text_style">
-        <item name="android:focusable">false</item>
-        <item name="android:textColor">@color/black51</item>
-    </style>
-
-    <style name="black_text_style" parent="marquee_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/transparent</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/text_size_16</item>
-    </style>
-
-    <style name="item_text_style" parent="black_text_style">
-        <item name="android:background">@color/transparent</item>
-        <item name="android:textSize">@dimen/text_size_14</item>
-        <item name="android:textColor">@color/value_black70</item>
-    </style>
-
-    <style name="title_style" parent="marquee_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/transparent</item>
-        <item name="android:textColor">@color/title_black</item>
-        <item name="android:textSize">@dimen/text_size_18</item>
-    </style>
-
-    <style name="grey_text_style" parent="marquee_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:textColor">@color/grey</item>
-        <item name="android:textSize">@dimen/text_size_12</item>
-    </style>
-
-    <!--账户地址的文本样式-->
-    <style name="address_text_style" parent="marquee_middle_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/transparent</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/text_size_16</item>
+    <style name="dialog_loading" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 
     <style name="marquee_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/transparent</item>
         <item name="android:singleLine">true</item>
         <item name="android:marqueeRepeatLimit">marquee_forever</item>
         <item name="android:ellipsize">marquee</item>
@@ -111,26 +68,16 @@
         <item name="android:paddingLeft">@dimen/d12</item>
         <item name="android:paddingRight">@dimen/d12</item>
         <item name="android:background">@drawable/bg_gradual_change</item>
-
-
     </style>
 
-    <style name="dialog_loading" parent="Theme.AppCompat.Dialog">
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowDisablePreview">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
-    </style>
 
     <!--Bcaas 二次界面改版-->
     <style name="button_style">
         <item name="android:background">@drawable/bcaas_bg_button</item>
         <item name="android:layout_height">@dimen/d48</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">@dimen/d10</item>
+        <item name="android:layout_marginRight">@dimen/d10</item>
         <item name="android:textSize">@dimen/text_size_20</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -141,5 +88,72 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">@dimen/text_size_20</item>
         <item name="android:textColor">@drawable/bg_btn_d_select_color</item>
+    </style>
+
+    <style name="line_style">
+        <item name="android:background">@color/black10_1d2124</item>
+        <item name="android:layout_height">@dimen/d1</item>
+        <item name="android:layout_marginRight">@dimen/d11</item>
+        <item name="android:layout_marginLeft">@dimen/d11</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="grey_14_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black30_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="white_bold_28_text_style" parent="marquee_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="white70_14_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/white70</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="white_14_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+
+    <style name="black_16_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
+
+    <style name="black_18_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
+    </style>
+
+    <style name="black30_12_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black30_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
+
+    <style name="black70_14_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black70_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="black_14_edit_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/d32</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
+        <item name="android:layout_marginTop">@dimen/d16</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:textColorHint">@color/black30_1d2124</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+    </style>
+
+    <style name="black30_14_edit_text_style" parent="black_14_edit_text_style">
+        <item name="android:focusable">false</item>
+        <item name="android:textColor">@color/black30_1d2124</item>
     </style>
 </resources>
