--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,6 +130,12 @@
         <item name="android:textSize">@dimen/text_size_18</item>
     </style>
 
+    <style name="black_bold_18_text_style" parent="marquee_style">
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
+    </style>
+
     <style name="black30_12_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black30_1d2124</item>
         <item name="android:textSize">@dimen/text_size_12</item>
