--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -18,7 +18,7 @@
         <io.bcaas.view.PasswordEditText
             android:id="@+id/pketPwd"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/d80"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d20"
             bcaas:hint="@string/password_rule_of_length"
             bcaas:title="@string/password" />
@@ -26,32 +26,24 @@
         <io.bcaas.view.PasswordEditText
             android:id="@+id/pketConfirmPwd"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/d80"
-            android:layout_marginBottom="@dimen/d16"
-            android:layout_marginTop="@dimen/d16"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/d20"
             bcaas:hint="@string/please_input_password_again"
-            bcaas:title="@string/confirm_password" />
-
+            bcaas:showLine="false"
+            bcaas:showTitle="false" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/tv_password_rule"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/d16"
-        android:paddingLeft="@dimen/d4"
-        android:text="@string/remember_password"
-        android:textColor="@color/red_da261f"
-        android:textSize="@dimen/text_size_12"
-        android:visibility="invisible" />
+        style="@style/red_14_text_style"
+        android:layout_margin="@dimen/d12"
+        android:text="@string/remember_password" />
 
     <Button
         android:id="@+id/btn_sure"
         style="@style/button_style"
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/d12"
-        android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
         android:enabled="false"
         android:text="@string/confirm" />
