--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,16 +18,15 @@
         android:layout_weight="2">
 
         <include
-            layout="@layout/include_edit_text_private_key"
+            layout="@layout/include_edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/d20"
-            android:digits="@string/password_rule" />
+            android:layout_margin="@dimen/d20" />
 
         <Button
             android:id="@+id/btn_unlock_wallet"
             style="@style/button_style"
-            android:layout_below="@+id/rl_private_key"
+            android:layout_below="@+id/rl_password_key"
             android:enabled="false"
             android:text="@string/unlock" />
 
