--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,8 +5,11 @@
         <attr name="hint" format="string" />
         <attr name="showTitle" format="boolean" />
         <attr name="showHint" format="boolean" />
+        <attr name="showLine" format="boolean" />
+
     </declare-styleable>
     <declare-styleable name="LineEditText">
         <attr name="lineColorEt" format="color" />
+        <attr name="line" format="boolean" />
     </declare-styleable>
 </resources>
