--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -8,8 +8,8 @@
     android:layout_marginTop="@dimen/d10">
 
     <EditText
-        android:id="@+id/et_private_key"
-        style="@style/black_14_edit_text_style"
+        android:id="@+id/et_password"
+        style="@style/black_14_single_edit_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -35,5 +35,5 @@
     <View
         android:id="@+id/v_password_line"
         style="@style/line_style"
-        android:layout_below="@+id/et_private_key" />
+        android:layout_below="@+id/et_password" />
 </RelativeLayout>
