--- a/app/src/main/res/layout/include_edit_text_private_key.xml
+++ b/app/src/main/res/layout/include_edit_text_private_key.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:line="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_private_key"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,22 +7,14 @@
     android:layout_marginRight="@dimen/d20"
     android:layout_marginTop="@dimen/d10">
 
-    <io.bcaas.view.LineEditText
-        android:id="@+id/let_private_key"
+    <EditText
+        android:id="@+id/et_private_key"
         style="@style/black_14_edit_text_style"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:background="@color/transparent"
-        android:digits="@string/password_rule"
-        android:drawablePadding="@dimen/d10"
-        android:hint="@string/input_password"
-        android:inputType="textPassword"
-        android:maxLength="16"
-        android:paddingBottom="@dimen/d10"
-        android:paddingRight="@dimen/d40"
-        android:textSize="@dimen/text_size_14"
-        line:lineColorEt="@color/black10_1d2124" />
+        android:inputType="textPassword|textMultiLine"
+        android:maxLines="2"
+        android:paddingRight="@dimen/d40" />
 
     <CheckBox
         android:id="@+id/cbPwd"
