--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,12 +138,39 @@
         <item name="android:textSize">@dimen/text_size_12</item>
     </style>
 
-    <style name="black70_14_text_style" parent="marquee_style">
+    <style name="black70_14_single_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black70_1d2124</item>
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
 
-    <style name="black_14_edit_text_style" parent="marquee_style">
+    <style name="black70_14_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColor">@color/black70_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="black30_14_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColor">@color/black30_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="black_14_single_edit_text_style" parent="marquee_style">
+        <item name="android:layout_height">@dimen/d32</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
+        <item name="android:layout_marginTop">@dimen/d16</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:textColorHint">@color/black30_1d2124</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+    </style>
+
+    <style name="black_14_edit_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/d32</item>
         <item name="android:cursorVisible">true</item>
