导入钱包界面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
 
 
     <color name="grey">#888888</color>
-    <color name="theme_grey">#fff2f2f2</color>
+    <color name="theme_grey">#F2F5F7</color>
     <color name="theme_grey_line">#fffefefe</color>
     <color name="grey50">#80888888</color>
     <color name="grey2">#55999999</color>
