--- a/app/src/main/res/layout/activity_import_wallet.xml
+++ b/app/src/main/res/layout/activity_import_wallet.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_import_wallet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rl_import_wallet"
     android:background="@color/theme_grey">
 
     <include layout="@layout/include_header" />
 
-    <LinearLayout
-        android:id="@+id/ll_private_key"
+    <RelativeLayout
+        android:id="@+id/rl_private_key"
         style="@style/bg_white_style"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rl_header"
-        android:layout_marginTop="@dimen/d100"
-        android:orientation="vertical">
+        android:layout_marginTop="@dimen/d60">
 
         <TextView
+            android:id="@+id/tv_title"
             style="@style/black_16_text_style"
-            android:layout_marginLeft="@dimen/d12"
             android:layout_marginTop="@dimen/d20"
             android:text="@string/private_key" />
 
         <EditText
-            android:id="@+id/et_privatekey"
-            style="@style/black_14_single_edit_text_style"
+            android:id="@+id/et_private_key"
+            style="@style/black_14_edit_text_style"
+            android:layout_below="@+id/tv_title"
             android:layout_marginBottom="@dimen/d20"
-            android:layout_marginLeft="@dimen/d12"
             android:layout_marginTop="@dimen/d16"
             android:hint="@string/enter_private_key"
+            android:inputType="textMultiLine"
             android:maxLength="51"
             android:maxLines="2" />
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_scan"
+            android:layout_width="@dimen/d20"
+            android:layout_height="@dimen/d20"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/d20"
+            android:background="@mipmap/icon_add"
+            android:padding="@dimen/d3" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_sure"
         style="@style/button_style"
         android:layout_width="match_parent"
-        android:layout_below="@+id/ll_private_key"
+        android:layout_below="@+id/rl_private_key"
         android:layout_marginLeft="@dimen/d10"
         android:layout_marginRight="@dimen/d10"
         android:layout_marginTop="@dimen/d30"
