--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -172,8 +172,10 @@
 
     <style name="black_14_edit_text_style">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/d32</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/d32</item>
         <item name="android:cursorVisible">true</item>
+        <item name="android:inputType">textMultiLine|textImeMultiLine</item>
         <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
         <item name="android:layout_marginTop">@dimen/d16</item>
         <item name="android:textSize">@dimen/text_size_14</item>
