--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/d16"
-            android:layout_marginTop="@dimen/d12"
+            android:layout_marginTop="@dimen/d20"
             android:background="@color/theme_grey">
 
             <RelativeLayout
@@ -27,7 +27,7 @@
 
                 <TextView
                     android:id="@+id/tv_address_key"
-                    style="@style/black_16_text_style"
+                    style="@style/blue_16_text_style"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
@@ -44,76 +44,104 @@
 
                     <TextView
                         android:id="@+id/tv_account_address_value"
-                        style="@style/black_16_text_style"
+                        style="@style/black_14_single_text_style"
                         android:layout_alignParentRight="true"
                         android:ellipsize="middle"
-                        android:gravity="center|right"
-                        android:textColor="@color/black70_1d2124" />
+                        android:gravity="center|right" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_account_address_value"
-                        android:layout_marginTop="@dimen/d16"
-                        android:gravity="center_vertical"
+                        android:layout_marginTop="@dimen/d24"
                         android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/tv_balance_key"
-                            style="@style/black_16_text_style"
+                        <LinearLayout
+                            android:id="@+id/ll_balance"
                             android:layout_width="@dimen/d0"
-                            android:layout_weight="1"
-                            android:gravity="right|center_vertical"
-                            android:text="@string/balance"
-                            android:textSize="@dimen/text_size_12" />
-
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right|center_vertical"
-                            android:layout_marginLeft="@dimen/d5"
-                            android:gravity="right|center_vertical"
-                            android:minWidth="@dimen/d50">
+                            android:layout_marginRight="@dimen/d10"
+                            android:layout_weight="1.1"
+                            android:gravity="left|center_vertical"
+                            android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/tv_balance"
-                                style="@style/black_16_text_style"
+                                android:id="@+id/tv_balance_key"
+                                style="@style/black50_12_text_style"
                                 android:layout_width="wrap_content"
-                                android:layout_marginLeft="@dimen/d5"
-                                android:gravity="right|center_vertical"
-                                android:maxWidth="@dimen/d100"
-                                android:textSize="@dimen/text_size_12"
-                                tools:text="0.000000" />
+                                android:gravity="left"
+                                android:text="@string/balance"
+                                android:textSize="@dimen/text_size_12" />
 
-                            <ProgressBar
-                                android:id="@+id/pb_balance"
-                                android:layout_width="@dimen/d15"
-                                android:layout_height="@dimen/d15"
-                                android:layout_marginLeft="@dimen/d5"
-                                android:layout_marginRight="@dimen/d5"
-                                android:gravity="right|center_vertical"
-                                android:indeterminateTint="@color/orange_yellow"
-                                android:visibility="gone" />
-                        </RelativeLayout>
+                            <RelativeLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:layout_marginTop="@dimen/d10"
+                                android:gravity="left">
 
+                                <TextView
+                                    android:id="@+id/tv_balance"
+                                    style="@style/black_14_text_style"
+                                    android:layout_width="wrap_content"
+                                    android:gravity="left"
+                                    android:textSize="@dimen/text_size_12"
+                                    tools:text="0.000000" />
+
+                                <ProgressBar
+                                    android:id="@+id/pb_balance"
+                                    android:layout_width="@dimen/d15"
+                                    android:layout_height="@dimen/d15"
+                                    android:layout_marginLeft="@dimen/d5"
+                                    android:layout_marginRight="@dimen/d5"
+                                    android:gravity="left"
+                                    android:indeterminateTint="@color/orange_yellow"
+                                    android:visibility="gone" />
+                            </RelativeLayout>
+                        </LinearLayout>
 
                         <View
                             android:id="@+id/v_vertical_line"
                             android:layout_width="@dimen/d1"
-                            android:layout_height="@dimen/d15"
-                            android:layout_below="@+id/tv_account_address_value"
-                            android:layout_margin="@dimen/d2"
-                            android:layout_toRightOf="@+id/tv_balance"
-                            android:background="@color/black30_1d2124" />
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="@dimen/d5"
+                            android:background="@color/black20_1d2124" />
 
-                        <TextView
-                            android:id="@+id/tv_currency"
-                            style="@style/black_16_text_style"
-                            android:layout_width="wrap_content"
+                        <RelativeLayout
+                            android:id="@+id/rl_currency"
+                            android:layout_width="@dimen/d0"
                             android:layout_height="wrap_content"
-                            android:drawablePadding="@dimen/d5"
-                            android:drawableRight="@mipmap/icon_dropdown"
-                            android:textSize="@dimen/text_size_12" />
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/tv_currency_key"
+                                style="@style/black50_12_text_style"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/currency" />
+
+                            <TextView
+                                android:id="@+id/tv_currency"
+                                style="@style/black_14_text_style"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/tv_currency_key"
+                                android:layout_marginTop="@dimen/d10"
+                                android:textSize="@dimen/text_size_12" />
+
+                            <Button
+                                android:id="@+id/btn_select_currency"
+                                android:layout_width="@dimen/d12"
+                                android:layout_height="@dimen/d12"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="@dimen/d16"
+                                android:layout_toRightOf="@+id/tv_currency_key"
+                                android:background="@mipmap/icon_dropdown" />
+                        </RelativeLayout>
                     </LinearLayout>
                 </RelativeLayout>
 
@@ -123,27 +151,28 @@
                 android:id="@+id/rl_transaction_info"
                 style="@style/bg_white_style"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rl_amount_info">
+                android:layout_below="@+id/rl_amount_info"
+                android:layout_marginTop="@dimen/d30">
 
                 <TextView
                     android:id="@+id/tv_transaction_block_title"
-                    style="@style/black_16_text_style"
+                    style="@style/blue_16_text_style"
                     android:layout_marginTop="@dimen/d20"
                     android:text="@string/receive_account" />
 
                 <View
                     android:id="@+id/v_line"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/d1"
+                    android:layout_height="@dimen/d0.5"
                     android:layout_below="@+id/tv_transaction_block_title"
-                    android:layout_marginBottom="@dimen/d16"
-                    android:layout_marginTop="@dimen/d10"
-                    android:background="@color/black30_1d2124" />
+                    android:layout_marginTop="@dimen/d16"
+                    android:background="@color/black20_1d2124" />
 
                 <TextView
                     android:id="@+id/tv_account_address_key"
                     style="@style/black_16_text_style"
                     android:layout_below="@+id/v_line"
+                    android:layout_marginTop="@dimen/d16"
                     android:text="@string/account_address" />
 
                 <TextView
@@ -169,18 +198,16 @@
 
                 <View
                     android:id="@+id/v_line_2"
+                    style="@style/line_style"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/d1"
                     android:layout_below="@+id/et_input_destination_address"
-                    android:layout_marginTop="@dimen/d10"
-                    android:background="@color/black10_1d2124" />
+                    android:layout_marginTop="@dimen/d16" />
 
                 <TextView
                     android:id="@+id/tv_transaction_amount_key"
-                    style="@style/black_16_text_style"
+                    style="@style/black_14_text_style"
                     android:layout_below="@+id/v_line_2"
                     android:layout_marginTop="@dimen/d16"
-                    android:inputType="number"
                     android:text="@string/transaction_amount" />
 
                 <EditText
@@ -189,8 +216,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_transaction_amount_key"
-                    android:layout_marginBottom="@dimen/d16"
-                    android:layout_marginTop="@dimen/d16"
+                    android:layout_marginBottom="@dimen/d20"
+                    android:layout_marginTop="@dimen/d20"
                     android:hint="@string/please_input_transaction_amount"
                     android:inputType="number"
                     android:textColor="@color/orange_yellow"
@@ -204,7 +231,7 @@
                 android:layout_below="@+id/rl_transaction_info"
                 android:layout_marginLeft="@dimen/d10"
                 android:layout_marginRight="@dimen/d10"
-                android:layout_marginTop="@dimen/d2"
+                android:layout_marginTop="@dimen/d30"
                 android:enabled="false"
                 android:text="@string/send" />
 
