--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -123,10 +123,18 @@
     </style>
 
     <style name="black_14_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
 
+    <style name="black_14_single_text_style" parent="marquee_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
     <style name="black_18_text_style" parent="marquee_style">
         <item name="android:textColor">@color/black_1d2124</item>
         <item name="android:textSize">@dimen/text_size_18</item>
@@ -190,7 +198,6 @@
     </style>
 
     <style name="black30_14_edit_text_style">
-
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/d32</item>
         <item name="android:cursorVisible">true</item>
@@ -207,5 +214,20 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/text_size_14</item>
+    </style>
+
+    <style name="blue_16_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
+
+    <style name="black50_12_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black50_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_12</item>
     </style>
 </resources>
